# cc-app

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  PRODUCT.md  README.md
.github/workflows/: ci.yml
docs/: ABOUT-DOCS.md  FILE-LAYOUT.md  HOW-TO-CODE.md  SCOPE-WRITTING.md  STATUS.md  WORKFLOW-LB.md
docs/debugging/: README.md
docs/debugging/authz/: bus-watch-unscoped-and-no-midstream-revoke.md  channel-wildcard-hold-does-not-match-hyphen-ids.md  grants-verbs-not-on-mcp-callback-surface.md  lb-grants-routing.patch  native-sidecar-not-spawned-and-caller-identity-not-propagated.md
docs/debugging/ui/: care-ext-blank-render-remoteentry-promise-child.md
docs/scope/: README.md
docs/scope/billing/: billing-scope.md
docs/scope/care/: attendance-scope.md  care-authz-scope.md  care-scope.md  daily-feed-scope.md  enrollment-invites-scope.md  menus-scope.md  messaging-scope.md
docs/scope/personas/: README.md
docs/scope/ui/: i18n-scope.md  mobile-shell-scope.md
docs/sessions/: HANDOVER-email-login-e2e.md
docs/sessions/care/: 03-enrollment-session.md  06-07-attendance-menus-session.md  09-messaging-session.md  10-hardening-launch-session.md  care-scope-session.md
i18n/: en.json  es.json
rust/: Cargo.toml  README.md
rust/extensions/: README.md
rust/extensions/care/: Cargo.toml  README.md  build.sh  extension.toml
rust/extensions/care/src/: call.rs  lib.rs  main.rs  ping.rs
rust/extensions/care/src/attendance/: check_in.rs  check_out.rs  check_out_tests.rs  correct.rs  gate.rs  list.rs  mod.rs  now.rs  occupancy.rs  records.rs
rust/extensions/care/src/authz/: README.md  caps.rs  deny.rs  grant.rs  host_callback.rs  mod.rs  pickup.rs  principal.rs  records.rs  scope.rs  store.rs
rust/extensions/care/src/center/: create.rs  get.rs  list.rs  mod.rs  records.rs
rust/extensions/care/src/child/: archive.rs  create.rs  get.rs  list.rs  mod.rs  records.rs  update.rs
rust/extensions/care/src/enrollment/: create.rs  list.rs  mod.rs  records.rs  update.rs
rust/extensions/care/src/feed/: emit.rs  mod.rs  watch.rs  watch_grant.rs
rust/extensions/care/src/guardian/: create.rs  list.rs  mod.rs  records.rs
rust/extensions/care/src/guardianship/: link.rs  mod.rs  records.rs  unlink.rs  update.rs
rust/extensions/care/src/i18n/: catalog.rs  mod.rs
rust/extensions/care/src/invite/: create_guardian.rs  create_staff.rs  list.rs  mod.rs  records.rs  resend.rs  revoke.rs  token_hash.rs
rust/extensions/care/src/log/: add.rs  add_media.rs  correct.rs  day.rs  day_tests.rs  list.rs  list_tests.rs  mod.rs  payload.rs  records.rs  validate.rs
rust/extensions/care/src/media/: begin.rs  commit.rs  mod.rs  serve_grant.rs  validate.rs
rust/extensions/care/src/menu/: allergen.rs  copy_week.rs  derive.rs  get.rs  mod.rs  records.rs  set.rs  week.rs  week_tests.rs
rust/extensions/care/src/messaging/: announce.rs  channel_id.rs  mod.rs  reconcile.rs  reconcile_verb.rs
rust/extensions/care/src/push/: mod.rs
rust/extensions/care/src/room/: create.rs  list.rs  mod.rs  records.rs
rust/extensions/care/tests/: live_node.rs  live_node_support.rs  live_wire.rs  matrix_attendance.rs  matrix_care_ping.rs  matrix_child_reads.rs  matrix_chokepoint.rs  matrix_completeness.rs  matrix_daily_feed.rs  matrix_edge_change.rs  matrix_era2.rs  matrix_era2_write.rs  matrix_menu_reads.rs  matrix_messaging.rs
rust/extensions/care/tests/common/: mod.rs
rust/extensions/care/ui/: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
rust/extensions/care/ui/scripts/: i18n-check.mjs
rust/extensions/care/ui/src/: App.tsx  main.tsx  remoteEntry.tsx  vite-env.d.ts
rust/extensions/care/ui/src/api/: care.ts  channels.ts
rust/extensions/care/ui/src/components/: BigButton.tsx  EmptyFeed.tsx  Field.tsx  LargeTitle.tsx  PageTitle.tsx  TabBar.tsx  TopBar.tsx
rust/extensions/care/ui/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  segmented.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx
rust/extensions/care/ui/src/hooks/: useCareSession.ts  useT.ts  useT.tsx
rust/extensions/care/ui/src/lib/: cn.ts  locale.ts
rust/extensions/care/ui/src/locales/: en.json  es.json
rust/extensions/care/ui/src/pages/: Home.tsx  index.ts
rust/extensions/care/ui/src/pages/admin/: AdminHomePage.tsx  CentersRoomsPage.tsx
rust/extensions/care/ui/src/pages/attendance/: AttendancePage.tsx  CheckInOutPage.tsx  KioskRosterPage.tsx  OccupancyDashboardPage.tsx
rust/extensions/care/ui/src/pages/child/: ChildrenListPage.tsx
rust/extensions/care/ui/src/pages/enrollment/: EnrollmentPage.tsx
rust/extensions/care/ui/src/pages/feed/: DaySummary.tsx  EntryRow.tsx  FeedPage.tsx  LogEntryPage.tsx  LogPayloadSheet.tsx  shared.ts
rust/extensions/care/ui/src/pages/guardian/: GuardiansAndEdgesPage.tsx
rust/extensions/care/ui/src/pages/invite/: MessagesPage.tsx
rust/extensions/care/ui/src/pages/menu/: GuardianWeekPage.tsx  MenuPlannerCells.tsx  MenuPlannerPage.tsx  MenusPage.tsx  ServingViewPage.tsx  shared.tsx
rust/extensions/care/ui/src/pages/messaging/: AnnouncementsCompose.tsx  MessagesPage.tsx  channel-meta.ts
rust/extensions/care/ui/src/styles/: index.css  tokens.css
rust/extensions/care/ui/src/widgets/: AttendanceBadgeWidget.tsx  NextMealWidget.tsx
rust/node/: Cargo.toml  README.md
rust/node/src/: boot.rs  care_mount.rs  main.rs
rust/node/tests/: boot_test.rs
scripts/: check-authz-fence.sh  check-file-size.sh  check-hardcoded-strings.sh  check-i18n-parity.sh  demo-seed.sh  e2e.sh  seed.sh
sessions/care/: 02-care-skeleton-authz-session.md  03-enrollment-session.md  04-mobile-shell-session.md  05-era2-write-and-invites-live.md  05-era2-write-live.md
sessions/node/: 01-host-boot-session.md
ui/: README.md  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite-dev-auth.ts  vite.config.ts
ui/e2e/: care-menus-attendance.spec.ts  email-login.spec.ts  ext-mount.spec.ts  login.spec.ts
ui/scripts/: i18n-check.mjs
ui/src/: App.tsx  main.tsx  router.tsx
ui/src/api/: auth.ts  (+1 more)
(+40 files in other folders)
