# cc-app — the Rust workspace.
#
# Two crates today (milestone 01 + 02):
#   node   — the boot shim binary. Embeds the lb core via `lb-node`
#            (BootConfig + boot_full), the same way NubeIO/rubix-ai does.
#            No product logic; reads CC_* env at the binary boundary
#            (CLAUDE.md rule 5) and fills BootConfig from it.
#   extensions/care — the single backend extension owning the whole
#            childcare domain and 100% of the product UI. Native tier
#            (Tier-2 sidecar); talks the published `lb-ext-native` SDK
#            (the child wire), nothing from lb internals (rule 10).
#
# Future: per-milestone extensions land here as additional workspace
# members, all following the same shape.
[workspace]
resolver = "2"
members = ["node", "extensions/care"]

[workspace.package]
edition = "2021"
license = "Proprietary"
rust-version = "1.90"
publish = false

[workspace.dependencies]
# lb-node — the embed seam. Pinned to a published `node-v*` tag from
# NubeDev/lb (the rules in WORKFLOW-LB.md §4). `node-v0.3.1` is the
# release that ships the additive `grants.*` / `roles.*` / `teams.*`
# routing arm in `/mcp/call` (`docs/debugging/authz/lb-grants-routing.patch`)
# — the upstream fix that unblocks the era-2 WRITE half (`grant mint` /
# `revoke`) for native extensions. era-2 read delegation has been live
# since `node-v0.3.0` (read proves the just-minted grant composes with
# the read path); era-2 WRITE round-trips over the callback once the
# extension talks `grants.assign` / `grants.revoke` via the same
# `SidecarClient`. This is a REAL tag pin: the build resolves it
# straight from GitHub with NO [patch] override (that block is dropped
# from .cargo/config.toml). NEVER commit a path/[patch] reference
# (WORKFLOW-LB.md §3).
lb-node = { git = "https://github.com/NubeDev/lb", tag = "node-v0.4.2" }

# lb-ext-native — the ONLY platform dep an in-tree extension may carry
# (WORKFLOW-LB.md §2). The child-side stdio wire (init/health/call/shutdown)
# + the Tools trait + serve_stdio + the PROTOCOL_MAJOR handshake gate, AND
# (from sdk-v0.4.0) the re-exported native host-callback client
# (`SidecarClient` / `Config` / `CallError`) — one dependency for both
# directions of the wire. A separate SDK repo (NubeDev/lb-ext-sdk); we pin
# the released `sdk-v0.4.0` tag. NOT patched — this is a published SDK.
lb-ext-native = { git = "https://github.com/NubeDev/lb-ext-sdk", tag = "sdk-v0.4.0" }

# lb-host + lb-supervisor — the native install/supervise seam cc-node's boot
# uses to spawn + register the care sidecar at start (`install_native` +
# `OsLauncher`, the same path lb's own `control_engine::mount` uses). These
# resolve to the SAME git tag as `lb-node` (`node-v0.4.0`, no [patch]), so
# cargo unifies the `lb-store` / `lb-auth` instances across `lb-node`,
# `lb-host`, and the care crate — one world, no duplicate-type wall.
lb-host = { git = "https://github.com/NubeDev/lb", tag = "node-v0.4.2" }
lb-supervisor = { git = "https://github.com/NubeDev/lb", tag = "node-v0.4.2" }
lb-auth = { git = "https://github.com/NubeDev/lb", tag = "node-v0.4.2" }

# The binary-boundary runtime + error type. The host is a thin tokio app.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1"

# Extension-side deps: serde for tool args/results. Each tool body's tests
# add `tokio` with `rt-multi-thread` for the boot-test harness.
serde = { version = "1", features = ["derive"] }
serde_json = "1"